2006-04-25  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Don't mkdir the Files target dir for every file copied

2006-04-20  Alexander Hansen  <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm:	Add 10.4.6 to supported OS flavors.

2006-04-19  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Don't crash if apt-cache is not present

2006-04-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: pass the checksum type when validating.

2006-04-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Check for %{PatchScript} using the correct case.

2006-04-08  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Validate PatchScript correctly even when file being
	validated is in the same directory from which 'fink validate' is 
	being run; also, recognize %{PatchScript} during validation no matter
	what its case.

2006-03-28  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Store architecture and debarch in $config object
	("Architecture" and "Debarch", not written to fink.conf) and
	remove exported $debarch. New method mixed_arch checks whether
	local machine matches $config arch.

	* Status.pm: Disable local dpkg when forging arch.

	* Package.pm: Disable saved pdb when forging arch.

	* VirtPackage.pm: Consider all virtuals "uninstalled" when forging
	arch.
	
	* all: Use $config data instead of $Fink::Config::debarch. Call
	mixed_arch to prevent compiling or doing any other local .deb
	actions if arch is forged.

2006-03-28  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Weaken .info validator settings for dependencies
	and only check each .info file once in -m mode.

2006-03-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Provide a way to get the path to the default cache.
	* Engine.pm: Make Engine::scanpackages more flexible.
	* Engine.pm, PkgVersion.pm: Accommodate changes to Engine::scanpackages.

2006-03-29  Dave Morrison  <dmrrsn@users.sourceforge.net>
