@@ -3394,15 +3394,12 @@ sub phase_install {
 				$target = "%i/$target";
 			}
 
-			# FIXME: if Files entry has colon, we throw out the last
-			# component of $target. Should we allow the same type of
-			# target renaming we do in DocFiles?
 			my $target_dir = dirname($target);
 
 			if (!$target_dirs{$target_dir}++) {
 				$install_script .= "\n/usr/bin/install -d -m 755 $target_dir";
 			}
-			$install_script .= "\n/bin/mv $source $target_dir/";
+			$install_script .= "\n/bin/mv $source $target";
 		}
 	}
 
